--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,42 +1,36 @@
 
 buildscript {
-  repositories {
-    google()
-    jcenter()
-  }
+    repositories {
+        jcenter()
+    }
 
-  dependencies {
-    classpath 'com.android.tools.build:gradle:3.2.1'
-  }
-}
-
-def getExtOrDefault(name) {
-  return rootProject.ext.has(name) ? rootProject.ext.get(name) : project.properties['ReactNativeCameraRoll_' + name]
-}
-
-def getExtOrIntegerDefault(name) {
-  return rootProject.ext.has(name) ? rootProject.ext.get(name) : (project.properties['ReactNativeCameraRoll_' + name]).toInteger()
+    dependencies {
+        classpath 'com.android.tools.build:gradle:1.3.1'
+    }
 }
 
 apply plugin: 'com.android.library'
 
 android {
-  compileSdkVersion getExtOrIntegerDefault('compileSdkVersion')
-  buildToolsVersion getExtOrDefault('buildToolsVersion')
+    compileSdkVersion 23
+    buildToolsVersion "23.0.1"
 
-  defaultConfig {
-    minSdkVersion getExtOrIntegerDefault('minSdkVersion')
-    targetSdkVersion getExtOrIntegerDefault('targetSdkVersion')
-  }
+    defaultConfig {
+        minSdkVersion 16
+        targetSdkVersion 22
+        versionCode 1
+        versionName "1.0"
+    }
+    lintOptions {
+        abortOnError false
+    }
 }
 
 repositories {
-  google()
-  jcenter()
-  mavenCentral()
+    mavenCentral()
 }
 
 dependencies {
-  //noinspection GradleDynamicVersion
-  api 'com.facebook.react:react-native:+'
+    compile 'com.facebook.react:react-native:+'
 }
+  
