--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,12 +1,11 @@
 
 buildscript {
     repositories {
-        google()
         jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:1.3.1'
     }
 }
 
@@ -14,6 +13,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
+    buildToolsVersion "23.0.1"
 
     defaultConfig {
         minSdkVersion 16
