--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-camera-roll-media",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.3",
+  "description": "camera roll",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,11 +9,9 @@
   "keywords": [
     "react-native"
   ],
-  "author": "",
-  "license": "",
-  "peerDependencies": {
-    "react-native": "^0.59.5"
-  },
+  "author": "Bachir Khiati",
+  "license": "Private",
+
   "jest": {
     "preset": "react-native",
     "setupFilesAfterEnv": [
