--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,11 +12,11 @@ buildscript {
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 28
-
-    defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 28
+compileSdkVersion safeExtGet('compileSdkVersion', 28)
+buildToolsVersion safeExtGet('buildToolsVersion', '28.0.3')
+defaultConfig {
+        minSdkVersion safeExtGet('minSdkVersion', 16)
+        targetSdkVersion safeExtGet('targetSdkVersion', 28)
         versionCode 1
         versionName "1.0"
     }
