--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,3 @@
-
 buildscript {
     repositories {
         jcenter()
@@ -10,6 +9,10 @@ buildscript {
 }
 
 apply plugin: 'com.android.library'
+
+def safeExtGet(prop, fallback) {
+    rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
+}
 
 android {
 compileSdkVersion safeExtGet('compileSdkVersion', 28)
